Time: 4 ms (13.17%), Space: 44.9 MB (21.44%) - LeetHub